--- a/mypage/mypage.html
+++ b/mypage/mypage.html
@@ -12,7 +12,7 @@
     <a href="/" class="outfind">아웃파인드</a>
     <nav>
         <ul class="nav-links">
-            <li><a href="maintpage.html">홈</a></li>
+            <li><a href="/">홈</a></li>
             <li><a href="#">서비스</a></li>
             <li><a href="#">회사 소개</a></li>
             <li><a href="#">연락처</a></li>
