--- a/mypage/mypage.html
+++ b/mypage/mypage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>마이페이지</title>
     <link rel="stylesheet" href="mypage.css"> <!-- CSS 파일 링크 -->
+    <link rel="stylesheet" href="mypagemob.css"> <!-- CSS 파일 링크 -->
 </head>
 <body>
 <!-- 공통 헤더 -->
@@ -47,7 +48,7 @@
 <footer>
     <div class="footer-content">
         <div class="footer-section">
-            <h2><a href="maintpage.html">홈</a></h2>
+            <h2><a href="/">홈</a></h2>
         </div>
         <div class="footer-section">
             <h2><a href="about.html">회사 소개</a></h2>
