--- a/loginpage/loginpage.html
+++ b/loginpage/loginpage.html
@@ -57,15 +57,18 @@
             <!-- 회원가입 버튼 -->
             <div class="register-link">
                 <p>계정이 없으신가요? <a href="../signuppage/signup.html">회원가입</a></p>
+                <p>비밀번호를 잊으셨나요? <a href="./password.html">비밀번호 재설정</a></p>
             </div>
+
         </div>
     </div>
+
     
         
 <footer>
     <div class="footer-content">
         <div class="footer-section">
-            <h2><a href="maintpage.html">홈</a></h2>
+            <h2><a href="/">홈</a></h2>
         </div>
         <div class="footer-section">
             <h2><a href="about.html">회사 소개</a></h2>
