--- a/mypage/mypage.html
+++ b/mypage/mypage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>마이페이지</title>
+    <title>아웃파인드 마이페이지</title>
     <link rel="stylesheet" href="mypage.css"> <!-- CSS 파일 링크 -->
     <link rel="stylesheet" href="mypagemob.css"> <!-- CSS 파일 링크 -->
 </head>
