--- a/introducepage/introduce.html
+++ b/introducepage/introduce.html
@@ -1,24 +1,251 @@
 <!DOCTYPE html>
 <html lang="kr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="introduce.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>아웃파인드 이용방법</title>
+        <link rel="stylesheet" type="text/css" href="introduce.css">
+        <script defer="defer" src="introduce.js"></script>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
+            rel="stylesheet">
+        <link rel="icon" href="/favicon_package_v0.16/favicon.ico">
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="favicon_package_v0.16/apple-touch-icon.png">
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="favicon_package_v0.16/favicon-32x32.png">
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="favicon_package_v0.16/favicon-16x16.png">
+        <link rel="manifest" href="favicon_package_v0.16/site.webmanifest">
+        <link
+            rel="mask-icon"
+            href="favicon_package_v0.16/safari-pinned-tab.svg"
+            color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+    </head>
+    <body>
+        <header>
+            <a href="/" class="outfind">아웃파인드</a>
 
-</head>
-<body>
-    <header>
-        <a href="/" class="outfind">아웃파인드</a>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="/">홈</a></li>
-                <li><a href="#">서비스</a></li>
-                <li><a href="#">회사 소개</a></li>
-                <li><a href="#">연락처</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h3>이용방법</h3>
-</body>
-</html>
+            <nav>
+                <ul class="nav-links">
+                    <li>
+                        <a href="/">홈</a>
+                    </li>
+                    <li>
+                        <a href="#">서비스</a>
+                    </li>
+                    <li>
+                        <a href="#">회사 소개</a>
+                    </li>
+                    <li>
+                        <a href="#">연락처</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <h3>이용방법</h3>
+        <div class="container">
+            <div class="tab-buttons">
+                <button class="tablinks" onclick="openTab(event, 'Company')">기업</button>
+                <button class="tablinks" onclick="openTab(event, 'Agency')">인력도급업체</button>
+                <button class="tablinks" onclick="openTab(event, 'Pricing')">이용 요금</button>
+            </div>
+            <div class="tabcontent" id="Company">
+                <h4 class="main">원하는 인력공급 프로젝트를 의뢰해 보세요.</h4>
+                <p class="mainp">매칭하기 버튼을 통해서 원하는 지역, 인원수, 업종을 선택해 인력도급업체와 매칭을 할 수 있습니다.</p>
+                <a href="/" class="register-link">프로젝트 등록하러 가기</a>
+                <img class="computer" src="/image/computerrm.png">
+                <div class="icon-container">
+                    <div class="icon-text">
+                        <img src="/image/money.png" alt="Money Icon">
+                        <div class="text-content">
+                            <h4>비용은 어느정도 드는건가요?</h4>
+                            <p>아웃파인드의 기본 매칭 시스템은 기업에게 비용을 부과하지 않습니다.</p>
+                        </div>
+                    </div>
+                    <div class="icon-text">
+                        <img src="/image/outsourcing.png" alt="Outsourcing Icon">
+                        <div class="text-content">
+                            <h4>원하는 아웃소싱이 안나와요.</h4>
+                            <p>아웃파인드는 제한없이 매칭을 이용할 수 있습니다.</p>
+                        </div>
+                    </div>
+                    <div class="icon-text">
+                        <img src="/image/securitydocument.png" alt="Security Document Icon">
+                        <div class="text-content">
+                            <h4>매칭정보는 노출이 되지 않나요?</h4>
+                            <p>아웃파인드는 매칭 정보의 보안을 최우선으로 합니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="explain-section">
+                    <h4>매칭은 어떻게 하나요?</h4>
+                    <img class="modal" src="/image/modal.png" alt="modal">
+
+                    <div class="explain-container">
+                        <div class="explain-item">
+                            <img src="/image/industry.png" alt="Industry Icon">
+                            <p>원하는 업종과 매칭하세요</p>
+                        </div>
+                        <div class="explain-item">
+                            <img src="/image/location.png" alt="Location Icon">
+                            <p>원하는 인력 공급 지역을 선택해서<br>
+                                미팅 시간을 최소화 하세요</p>
+                        </div>
+                        <div class="explain-item">
+                            <img src="/image/people.png" alt="People Icon">
+                            <p>요구되는 인원을 보유하고 있는<br>
+                                인력도급업체와 매칭을 진행하세요</p>
+                        </div>
+                        <div class="explain-item">
+                            <img src="/image/phone.png" alt="Phone Icon">
+                            <p>담당자 번호를 입력하여<br>
+                                추후 연락을 나눠보세요</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="matchingsection">
+                    <h4>프로젝트 제출한 이후에는 어떻게 하나요?</h4>
+                    <div class="content-container">
+                        <div class="video-container">
+                            <img src="/image/video.gif">
+                        </div>
+                        <div class="matchingguide">
+                            <img src="/image/check.png" alt="Check Icon">
+                            <div class="matchingguide-text">
+                                <h4>매칭하기 버튼 선택 이후<br>
+                                    인력도급업체의 연락을 기다려보세요!</h4>
+                                <p>마이페이지를 통해 매칭 신청한 인력도급업체를 볼 수 있습니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="/" class="register-link">프로젝트 등록하러 가기</a>
+
+            </div>
+
+            <div class="tabcontent" id="Agency">
+                <div class="matchingsection">
+                    <h4>영업의 시간을 줄여보세요.</h4>
+                    <div class="custom-container">
+                        <div class="custom-text-content">
+                            <h4>인력도급 업체의 영업은 대부분이 힘들다고 느끼고 있습니다.</h4>
+                            <p class="mainp">아웃소싱 영업을 어렵다고 느끼는 76% 중 45%가 직접 방문해도 거절당한다고 응답하였습니다.<br>
+                                직접 기업을 찾아다니기에 비효율적인 영업 경비가 사용됩니다.
+                            </p>
+                        </div>
+                        <div class="custom-image-container">
+                            <img src="/image/sales.gif" alt="Sales Image"/>
+                        </div>
+                    </div>
+                    <h4>영업시간은 어떻게 단축하나요?</h4>
+                    <div class="matchingsection">
+                        <div class="signup-container">
+                            <img src="/image/signup2.png" alt="회원가입 안내 이미지">
+                            <div class="info-section">
+                                <h4>회원가입시 1차, 2차직종을<br> 선택하세요</h4>
+                                <div class="checklist">
+                                    <div class="check-item">
+                                        <img src="/image/check.png" alt="Check Icon" class="check-icon">
+                                        <span>1차 직종을 선택하세요</span>
+                                    </div>
+                                    <div class="check-item">
+                                        <img src="/image/check.png" alt="Check Icon" class="check-icon">
+                                        <span>2차 직종을 선택하세요</span>
+                                    </div>
+                                    <div class="check-item">
+                                        <img src="/image/check.png" alt="Check Icon" class="check-icon">
+                                        <span>지역을 선택하세요</span>
+                                    </div>
+                                </div>
+                                <p class="mainp">아웃파인드는 직종, 지역을 기반으로 기업과 인력도급업체가 매칭됩니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="matchingsection">
+                        <h4>기업의 매칭 신청을 어떻게 확인하나요?</h4>
+                        <div class="content-container">
+                            <div class="video-container">
+                                <img src="/image/outsourcing.gif">
+                            </div>
+                            <div class="matchingguide">
+                                <div class="matchingguide-text">
+                                    <h4>마이페이지를 통해<br>기업의 매칭신청 이력을 확인 할 수 있습니다.</h4>
+                                    <p>이후 수락 버튼을 통해 결제를 하면 기업의 정보를 확인할 수 있습니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="matchingsection">
+                        <h4>기업으로 부터 매칭이 오지 않아요</h4>
+                        <div class="centered-container">
+                            <img src="/image/capture.png" class="main-image" alt="Main Image">
+                            <h4>기업소개는 중요해요!</h4>
+                            <div class="sub-images">
+                                <div class="image-text-container">
+                                    <img src="/image/career.png" class="sub-image" alt="Career Image">
+                                    <p class="image-text">경력을 입력하면 기업에게<br> 신뢰성을 줄 수 있어요</p>
+                                </div>
+                                <div class="image-text-container">
+                                    <img src="/image/work.png" class="sub-image" alt="Work Image">
+                                    <p class="image-text">보유 인력을 상세하게 설명하면 기업에게<br> 신뢰성을 줄 수 있어요</p>
+                                </div>
+                                <div class="image-text-container">
+                                    <img src="/image/introduction.png" class="sub-image" alt="Introduction Image">
+                                    <p class="image-text">다양한 방법으로 자사를 소개한다면<br> 매칭확률이 늘어납니다.</p>
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
+                <div class="tabcontent" id="Pricing">
+                    <h4>이용 요금</h4>
+                    <p>이용 요금에 대한 설명입니다...</p>
+                </div>
+            </div>
+        </div>
+        </body>
+        <footer>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h2>
+                        <a href="/">홈</a>
+                    </h2>
+                </div>
+                <div class="footer-section">
+                    <h2>
+                        <a href="about.html">회사 소개</a>
+                    </h2>
+                </div>
+                <div class="footer-section">
+                    <h2>
+                        <a href="matching_guide.html">매칭 가이드</a>
+                    </h2>
+                </div>
+                <div class="footer-section">
+                    <h2>
+                        <a href="faq.html">FAQ</a>
+                    </h2>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>Email: outfind222@gmail.com</p>
+                <p>Phone: 010-4653-3002</p>
+                <p>Address: 강원도 원주시, 상지대길 58-7</p>
+                <p>사업자등록번호: 668-16-02391</p>
+                <p>&copy; 2024 Outfind. All rights reserved.</p>
+                <p>대표: 황성민</p>
+            </div>
+        </footer>
+    </html>
