--- a/mypage/mypage.html
+++ b/mypage/mypage.html
@@ -154,8 +154,9 @@
                             <div class="form-group">
                                 <label for="tax_certificate">납세 증명서:</label>
                                 <input type="file" id="tax_certificate" name="tax_certificate">
+                                <div id="uploaded-file-name"></div> <!-- 파일 이름 표시 영역 -->
                             </div>
-                
+                            
                             <button type="submit">수정</button>
                         </form>
                     </section>
