--- a/introducepage/introduce.html
+++ b/introducepage/introduce.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>아웃파인드 이용방법</title>
         <link rel="stylesheet" type="text/css" href="introduce.css">
+        <link rel="stylesheet" type="text/css" href="introducemob.css">
+        
         <script defer="defer" src="introduce.js"></script>
         <link
             href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
