--- a/signuppage/signup.html
+++ b/signuppage/signup.html
@@ -171,7 +171,7 @@
             </div>
             <button type="submit">회원가입</button>
         </form>
-    </div>
+    </div></div>
     </div>
         <!-- 약관 및 개인정보 동의 섹션 -->
         <div id="agreement-section">
