--- a/signuppage/signup.html
+++ b/signuppage/signup.html
@@ -8,27 +8,56 @@
     <link rel="stylesheet" href="signupmob.css"> <!-- CSS 파일 링크 -->
 
 </head>
-<header>
-    <a href="/" class="outfind">아웃파인드</a>
-    <nav>
-        <ul class="nav-links">
-            <li>
-                <a href="/">홈</a>
-            </li>
-            <li>
-                <a href="/company/company.html">회사소개</a>
-            </li>
-            <li>
-                <a href="/introducepage/introduce.html">매칭 가이드</a>
-            </li>
-            <li>
-                <a href="#">FAQ</a>
-            </li>
-        </ul>
-        
-    </nav>
-</header>
 <body>
+    <div class="mobile-header">
+        <a href="/" class="outfind2">아웃파인드</a>
+        <div class="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    <header>
+        <a href="/" class="outfind">아웃파인드</a>
+        <nav>
+            <ul class="nav-links">
+                <li>
+                    <a href="/">홈</a>
+                </li>
+                <li>
+                    <a href="/company/company.html">회사소개</a>
+                </li>
+                <li>
+                    <a href="/introducepage/introduce.html">매칭 가이드</a>
+                </li>
+                <li>
+                    <a href="#">FAQ</a>
+                </li>
+            </ul>
+            
+        </nav>
+    </header>
+    <div class="sidebar">
+        <div class="sidebar-header">
+            <button class="sidebar-close">×</button>
+            <span class="outfind2">아웃파인드</span>
+        </div>
+        <div class="sidebar-content">
+            <ul class="user-links">
+                <li class="login-link"><a href="../loginpage/loginpage.html" id="sidebar-login-link">로그인</a></li>
+                <li class="signup-link"><a href="../signuppage/signup.html" id="sidebar-signup-link">회원가입</a></li>
+                <li class="mypage-link"><a href="../mypage/mypage.html" id="sidebar-mypage-link">마이페이지</a></li>
+                <li class="logout-link"><a href="#" id="sidebar-logout-link">로그아웃</a></li>
+            </ul>
+            <div class="sidebar-match-button"><a href="#" id="sidebar-match-button">매칭하기</a></div>
+        </div>
+        <ul class="nav-links">
+            <li><a href="/company/company.html">회사소개</a></li>
+            <li><a href="/introducepage/introduce.html">매칭가이드</a></li>
+            <li><a href="/faq/faq.html">FAQ</a></li>
+        </ul>
+        <img class="footer_logo" src="/image/logo3.png">
+    </div>
     <div class="login-wrapper">
     <div class="image-container">
         <div class="image-caption">
@@ -666,7 +695,7 @@
     <!-- JavaScript 파일 링크 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="signup.js"></script>
-   
+   <script src="/hambuger.js"></script>
 
     <script>  
 // JavaScript 코드
