--- a/faq/faq.html
+++ b/faq/faq.html
@@ -24,7 +24,7 @@
                 <li><a href="/">홈</a></li>
                 <li><a href="/company/company.html">회사소개</a></li>
                 <li><a href="/introducepage/introduce.html">매칭 가이드</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="/faq/faq.html">FAQ</a></li>
             </ul>
             <ul class="user-links">
                 <li class="login-link"><a href="../loginpage/loginpage.html" id="login-link">로그인</a></li>
