--- a/introducepage/introduce.html
+++ b/introducepage/introduce.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" type="text/css" href="introducemob.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-        <script src="/hambuger.js"></script>
-        <script defer="defer" src="introduce.js"></script>
 
+        <script defer="defer" src="introduce.js"></script>
+        <script src="/hambuger.js"></script>
         <link
             href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
             rel="stylesheet">
@@ -94,7 +94,7 @@
                     <li class="mypage-link"><a href="../mypage/mypage.html" id="sidebar-mypage-link">마이페이지</a></li>
                     <li class="logout-link"><a href="#" id="sidebar-logout-link">로그아웃</a></li>
                 </ul>
-                <div class="sidebar-match-button"><a href="#" id="sidebar-match-button">매칭하기</a></div>
+                <div class="sidebar-match-button"><a id="sidebar-match-button">매칭하기</a></div>
             </div>
             <ul class="nav-links">
                 <li><a href="/company/company.html">회사소개</a></li>
@@ -266,7 +266,7 @@
             </div>
             <div class="tabcontent" id="Pricing">
                 <h4>이용 요금</h4>
-                <p>이용 요금에 대한 설명입니다...</p>
+                <p>이용 요금에 대한 설명입니다</p>
                 <div class="container">
                     <h1>인력 도급(공급) 프로젝트</h1>
                     <h2>이용요금</h2>
